[package]
name = "vulkan-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.26.0", features = [
    "libloading",
    "provisional",
    "window",
] }
winit = "0.29"

[[bin]]
name = "05_base_code"
path = "src/05_base_code.rs"

[[bin]]
name = "06_instance"
path = "src/06_instance.rs"

[[bin]]
name = "07_validation_layers"
path = "src/07_validation_layers.rs"

[[bin]]
name = "08_physical_devices_and_queue_families"
path = "src/08_physical_devices_and_queue_families.rs"

[[bin]]
name = "09_logical_device_and_queues"
path = "src/09_logical_device_and_queues.rs"

[[bin]]
name = "10_window_surface"
path = "src/10_window_surface.rs"

[[bin]]
name = "11_swapchain"
path = "src/11_swapchain.rs"
